--- a/Bootstrap/package.json
+++ b/Bootstrap/package.json
@@ -1,9 +1,18 @@
 {
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0"
+    "jquery": "^1.12.4"
+  },
+  "devDependencies": {
+    "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.5.1"
   },
   "scripts": {
+    "build": "webpack",
     "build:less": "lessc less/app.less css/app.css"
   }
 }
