--- a/Bootstrap/package.json
+++ b/Bootstrap/package.json
@@ -9,6 +9,8 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "style-loader": "^0.17.0",
+    "uglify-js": "^2.8.0",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.5.1"
   },
   "scripts": {
