--- a/Bootstrap/package.json
+++ b/Bootstrap/package.json
@@ -5,7 +5,9 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.1",
+    "eslint": "^3.19.0",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "style-loader": "^0.17.0",
