--- a/Modules-Webpack/package.json
+++ b/Modules-Webpack/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "webpack",
+    "build:dev": "webpack -w",
     "start:dev": "npm run build && http-server"
   }
 }
